Fixed bedrock completion commands